update manifest to meet beforeinstallprompt criteria

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,5 +12,6 @@
     ],
     "start_url": "/",
     "theme_color": "#764ABC",
-    "background_color": "#764ABC"
+    "background_color": "#764ABC",
+    "display": "minimal-ui"
 }
